--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,4 +18,9 @@
       {% endfor %}
     {% endif %}
   </body>
+  <style>
+      :root {
+      color-scheme: light only;
+    }
+  </style>
 </html>
