--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,57 @@
       {% endfor %}
     {% endif %}
   </body>
+
   <style>
-      :root {
-      color-scheme: light only;
+    /* reset.css */
+    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      font: inherit;
+      vertical-align: baseline;
     }
-  </style>
+    table {
+      border-collapse: collapse;
+      border-spacing: 0;
+    }
+    /*====================*/
+    section {max-width:960px; margin:30px auto; padding:30px;}
+    table {
+      width: 100%;
+    }
+    th, td {
+      padding: 10px;
+      border: 1px solid #ddd;
+    }
+    th {
+      background: #f4f4f4;
+    }
+    .dataframe th, .dataframe td {
+      width: 20%;
+      text-align: left;
+    }
+    
+      @media only screen and (max-width: 768px) {
+        .dataframe {
+          margin: 0 -10px;
+        }
+        .dataframe tr {
+          display: block;
+          margin-bottom: 10px;
+        }
+        .dataframe th {
+          display: block;
+          width: 100%;
+        }
+        .dataframe td {
+          display: list-item;
+          width: 90%;
+          margin-left: 10%;
+          border: none;
+        }
+      }
+    </style>
+    
 </html>
