--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 
   {%-seo title=false-%}
   {%-feed_meta-%}
-  <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">🏟️</text></svg>'; />
+  <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">📺</text></svg>'; />
   <!-- <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}" /> -->
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
 </head>
