--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
     table {
       border-collapse: collapse;
       border-spacing: 0;
+      margin: auto; 
+      text-align: center;
     }
     /*====================*/
     section {max-width:960px; margin:30px auto; padding:30px;}
