--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
     }
     .dataframe th, .dataframe td {
       width: 20%;
-      text-align: center;
+      text-align: left;
     }
     
       @media only screen and (max-width: 768px) {
