--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,6 @@
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">📺</text></svg>'; />
   <!-- <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}" /> -->
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1156865965284303"
+     crossorigin="anonymous"></script>
 </head>
