--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,6 +4,6 @@ layout: default
 
 {%-include back_link.html-%}
 
-<h1>{{ page.title }}</h1>
+<u><h1 style="text-align: center;">{{ page.title }}</h1></u>
 
 {%-include post_list.html category=page.which_category-%}
