--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,6 @@ layout: default
 
 {%-include back_link.html-%}
 
-<h1>{{ page.title }}</h1>
+<u><h1 style="text-align: center;">{{ page.title }}</h1></u>
 
 {{ content }}
