--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -7,3 +7,16 @@ layout: default
 <u><h1 style="text-align: center;">{{ page.title }}</h1></u>
 
 {%-include post_list.html category=page.which_category-%}
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1156865965284303"
+     crossorigin="anonymous"></script>
+<!-- 수평형 디스플레이 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1156865965284303"
+     data-ad-slot="9135720380"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
