--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,7 +4,7 @@ layout: default
 
 {%-include back_link.html-%}
 
-<u><h1 style="text-align: center;">{{ page.title }}</h1></u>
+<u><h1 style="text-align: left;">{{ page.title }}</h1></u>
 
 {%-include post_list.html category=page.which_category-%}
 
