--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header>
-  <u><h1 style="text-align: center;">{{ site.title }}</h1></u>
+  <u><h1 style="text-align: left;">{{ site.title }}</h1></u>
   {%-if site.theme_config.show_description-%}
     <p>{{ site.description }}</p>
   {%-endif-%}
