--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
   </p>
   
-  <u><h1 style="text-align: center;">{{ page.title }}</h1></u>
+  <u><h1 style="text-align: left;">{{ page.title }}</h1></u>
 
   {{ content }}
 </article>
