--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,8 @@ layout: default
     <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
   </p>
   
-  <u><h1 style="text-align: left;">{{ page.title }}</h1></u>
-
+     <h1 style="text-align: left;">{{ page.title }}</h1>
+     <hr style="width:50%;margin-left: auto;margin-right: auto;" />
   {{ content }}
 </article>
 
