--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="supported-color-schemes" content="light"/>
-
+  <meta name="description" content="WJ의 정신없는 개발일지">
   <title>
     {%- if page.title -%}
       {{ page.title }}
