--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="supported-color-schemes" content="light"/>
   <meta name="description" content="WJ의 정신없는 개발일지">
+  <meta name=”robots” content=”index” />
+  
   <title>
     {%- if page.title -%}
       {{ page.title }}
