--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="supported-color-schemes" content="light"/>
   <meta name="description" content="WJ의 정신없는 개발일지">
   <meta name=”robots” content=”index” />
-  
+  <meta name=”keywords” content="주식,관련주,시즌,암,빅데이터,데이터″ />
   <title>
     {%- if page.title -%}
       {{ page.title }}
